<?xml version="1.0" encoding="utf-8"?>
    <merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/black"
            android:theme="@style/Theme.PasswordPolicyComponent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/checkbox_match"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_check_box_outline_blank_white_24dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/matchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/passwords_match"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox_match"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_match"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/checkPasswordPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/criteriaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/password_policy_title"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textAlignment="textStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/lower_upper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/criteria_upper_lower"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/criteriaTextView"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_lower_upper"
                    />

                <ImageView
                    android:id="@+id/checkbox_lower_upper"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_check_box_outline_blank_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lower_upper"
                    app:layout_constraintBottom_toBottomOf="@+id/lower_upper"
                    />

                <TextView
                    android:id="@+id/one_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="At least one number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lower_upper"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_one_number"
                    />

                <ImageView
                    android:id="@+id/checkbox_one_number"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_check_box_outline_blank_white_24dp"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_lower_upper"
                    app:layout_constraintTop_toTopOf="@+id/one_number"
                    app:layout_constraintBottom_toBottomOf="@+id/one_number"
                    />

                <TextView
                    android:id="@+id/one_special_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/criteria_at_least_1_special"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/one_number"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_one_special_char"
                    />

                <ImageView
                    android:id="@+id/checkbox_one_special_char"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_check_box_outline_blank_white_24dp"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_one_number"
                    app:layout_constraintTop_toBottomOf="@+id/checkbox_one_number"
                    app:layout_constraintTop_toTopOf="@+id/one_special_char"
                    app:layout_constraintBottom_toBottomOf="@+id/one_special_char"
                    />

                <TextView
                    android:id="@+id/min_15_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/criteria_min_8_15_len"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_min_15_char"
                    app:layout_constraintTop_toBottomOf="@+id/one_special_char" />

                <ImageView
                    android:id="@+id/checkbox_min_15_char"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_check_box_outline_blank_white_24dp"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_one_special_char"
                    app:layout_constraintTop_toTopOf="@+id/min_15_char"
                    app:layout_constraintBottom_toBottomOf="@+id/min_15_char"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>