<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sweny.reusuable.component.passwordpolicycomponent.viewmodels.PasswordPolicyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:theme="@style/Theme.PasswordPolicyComponent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="120dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_submain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="left"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <TextView
                        android:id="@+id/verify_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/verify_reset"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="17dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/til_new_password"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--  Can not use default style -->
                    <!-- style="@style/trip_textinput_style"-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:hint="@string/new_password"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/purple_500"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/verify_password">

                        <com.google.android.material.textfield.TextInputEditText
                            app:boxStrokeColor="@color/purple_500"
                            android:id="@+id/et_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/purple_200"
                            android:backgroundTint="@color/purple_200"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            app:passwordToggleEnabled="true"
                            android:text="@={viewModel.newPassword1}"
                            android:textSize="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:boxStrokeColor="@color/purple_500"
                        android:id="@+id/til_confirm_password"
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm password"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/purple_500"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_new_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/purple_200"
                            android:backgroundTint="@color/purple_200"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            app:passwordToggleEnabled="true"
                            android:text="@={viewModel.newPassword2}"
                            android:textSize="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.sweny.reusuable.component.passwordpolicycomponent.widgets.PasswordPolicyComponent
                        android:id="@+id/password_policy_component"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_200"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />
                </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21dp"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@color/purple_200"
            android:text="@string/save_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
